# CircuitPython_Picomo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.rst  README.rst.license  optional_requirements.txt  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: build.yml  release_gh.yml
picomo/: __init__.py  board_version.py  buzzer.py  led.py  logo.py
