# SPDX-FileCopyrightText: 2025 Jacques Supcik <jacques.supcik@hefr.ch>
#
# SPDX-License-Identifier: MIT
[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]

[project]
name = "circuitpython-picomo"
description = "Library for Picomo"
version = "0.1.0"
readme = "README.rst"
authors = [{ name = "Jacques Supcik", email = "jacques.supcik@hefr.ch" }]
urls = { Homepage = "https://github.com/heia-picomo/CircuitPython_Picomo" }
keywords = ["circuitpython", "micropython", "picomo"]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["picomo"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { optional = { file = ["optional_requirements.txt"] } }
